edit user is finished