@@ -1,9 +1,15 @@
 package dao.person;
 
+import java.io.FileInputStream;
 import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -16,6 +22,7 @@ import au.com.bytecode.opencsv.CSVReader;
 import au.com.bytecode.opencsv.CSVWriter;
 import beans.User;
 import enums.Gender;
+import services.profile.EditProfileData;
 import services.search.SearchData;
 import services.search.UserSearchData;
 
@@ -27,6 +34,24 @@ public class UserDAO {
 	public UserDAO(String contextPath) {
 		this.path = contextPath;
 		readFile();
+	}
+
+	public static void main(String[] args) {
+		UserDAO dao = new UserDAO("src");
+		/*dao.add(new User(dao.generateId(), dao.generateId(),"password","email","name","surname",LocalDate.now(),Gender.MALE,"profilePicture","biography",new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false,false,false));
+		dao.add(new User(dao.generateId(), dao.generateId(),"password","email","name","surname",LocalDate.now(),Gender.MALE,"profilePicture","biography",new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false,false,false));
+		dao.add(new User(dao.generateId(), dao.generateId(),"password","email","name","surname",LocalDate.now(),Gender.MALE,"profilePicture","biography",new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),new ArrayList<>(),false,false,false));
+		*/
+		
+		EditProfileData data = new EditProfileData();
+		data.setBiography("biography");
+		data.setDateOfBirth("2020-11-11");
+		data.setGender("MALE");
+		data.setName("name");
+		data.setPassword("password");
+		data.setPrivacy("privacy");
+		data.setSurname("surname");
+		dao.editUser("U00001", data);
 	}
 
 	public Collection<User> findAll() {
@@ -48,8 +73,26 @@ public class UserDAO {
 		writeFile();
 	}
 
+	public void editUser(String id, EditProfileData data) {
+		User user = findById(id);
+		System.out.println(data.getPrivacy());
+		user.setName(data.getName());
+		user.setSurname(data.getSurname());
+		if (!data.getPassword().equals("")) {
+			user.setPassword(data.getPassword());
+		}
+		user.setGender(getGender(data.getGender().toUpperCase()));
+		user.setDateOfBirth(getDate(data.getDateOfBirth()));
+		user.setBiography(data.getBiography());
+		if (data.getPrivacy().equals("private")) {
+			user.setPrivate(true);
+		} else {
+			user.setPrivate(false);
+		}
+		writeFile();
+	}
+
 	public User findByUsername(String username) {
-		System.out.println("stigao");
 		if (!users.containsKey(username)) {
 			return null;
 		}
@@ -57,7 +100,7 @@ public class UserDAO {
 	}
 
 	public User find(String username, String password) {
-		for (String user : users.keySet() ) {
+		for (String user : users.keySet()) {
 			System.out.println(user);
 		}
 		if (!users.containsKey(username)) {
@@ -76,19 +119,22 @@ public class UserDAO {
 		StringBuilder sb = new StringBuilder();
 		sb.append("U");
 		sb.append(number);
+		System.out.println(sb);
 		return sb.toString();
 
 	}
 
 	public void writeFile() {
 		try {
-			CSVWriter writer = new CSVWriter(new FileWriter(this.path + "/resources/" + CSV_FILE), ';',
+			OutputStream os = new FileOutputStream(this.path + "/resources/" + CSV_FILE);
+			CSVWriter writer = new CSVWriter(new PrintWriter(new OutputStreamWriter(os, "UTF-8")), ';',
 					CSVWriter.NO_QUOTE_CHARACTER, CSVWriter.DEFAULT_ESCAPE_CHARACTER, CSVWriter.DEFAULT_LINE_END);
+
 			List<String[]> data = new ArrayList<String[]>();
 			data.add(new String[] { "id", "username", "password", "email", "name", "surname", "dateOfBirth", "gender",
 					"profilePicture", "biography", "friendIDs", "friendRequestIDs", "postIDs", "pictureIDs", "chats",
 					"isPrivate", "isBlocked", "isAdmin" });
-			for (User u : findAll()) {
+			for (User u : users.values()) {
 				data.add(new String[] { u.getId(), u.getUsername(), u.getPassword(), u.getEmail(), u.getName(),
 						u.getSurname(), u.getDateOfBirth().toString(), u.getGender().toString(), u.getProfilePicture(),
 						u.getBiography(), printList(u.getFriends()), printList(u.getFriendRequests()),
@@ -102,39 +148,38 @@ public class UserDAO {
 			e.printStackTrace();
 		}
 	}
-	
+
 	void readFile() {
-        try (CSVReader csvr = new CSVReader(new FileReader(this.path + "/resources/" + CSV_FILE), ';',
-                CSVWriter.NO_QUOTE_CHARACTER, 1)) {
-            String[] nextLine;
-            /*
-             * String[] columns = new String[] { "id", "username", "password", "email",
-             * "name", "surname", "dateOfBirth", "gender", "profilePicture", "biography",
-             * "friendIDs", "friendRequestIDs", "postIDs", "pictureIDs", "chats",
-             * "isPrivate", "isBlocked", "isAdmin" };
-             */
-            while ((nextLine = csvr.readNext()) != null) {
-                LocalDate date = getDate(nextLine[6]);
-                Gender gender = getGender(nextLine[7]);
-                ArrayList<String> friends = getList(nextLine[10]);
-                ArrayList<String> friendRequests = getList(nextLine[11]);
-                ArrayList<String> posts = getList(nextLine[12]);
-                ArrayList<String> chats = getList(nextLine[13]);
-                User user = new User(nextLine[0], nextLine[1], nextLine[2], nextLine[3], nextLine[4], nextLine[5], date,
-                        gender, nextLine[8], nextLine[9], friends, friendRequests, posts, chats,
-                        new Boolean(nextLine[14]), new Boolean(nextLine[15]), new Boolean(nextLine[16]));
-                System.out.println(user);
-                users.put(user.getUsername(), user);
-            }
-            csvr.close();
+		try {
+			CSVReader csvr = new CSVReader(
+					new InputStreamReader(new FileInputStream(this.path + "/resources/" + CSV_FILE), "UTF-8"), ';',
+					'\'', 1);
 
-        } catch (FileNotFoundException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
-    }
+			String[] nextLine;
+			/*
+			 * String[] columns = new String[] { "id", "username", "password", "email",
+			 * "name", "surname", "dateOfBirth", "gender", "profilePicture", "biography",
+			 * "friendIDs", "friendRequestIDs", "postIDs", "pictureIDs", "chats",
+			 * "isPrivate", "isBlocked", "isAdmin" };
+			 */
+			while ((nextLine = csvr.readNext()) != null) {
+				LocalDate date = getDate(nextLine[6]);
+				Gender gender = getGender(nextLine[7]);
+				ArrayList<String> friends = getList(nextLine[10]);
+				ArrayList<String> friendRequests = getList(nextLine[11]);
+				ArrayList<String> posts = getList(nextLine[12]);
+				ArrayList<String> chats = getList(nextLine[13]);
+				User user = new User(nextLine[0], nextLine[1], nextLine[2], nextLine[3], nextLine[4], nextLine[5], date,
+						gender, nextLine[8], nextLine[9], friends, friendRequests, posts, chats,
+						new Boolean(nextLine[14]), new Boolean(nextLine[15]), new Boolean(nextLine[16]));
+				System.out.println(user);
+				users.put(user.getUsername(), user);
+			}
+		} catch (IOException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+	}
 
 	private String printList(List<?> elems) {
 		StringBuilder sb = new StringBuilder();
@@ -148,14 +193,13 @@ public class UserDAO {
 		return sb.toString();
 	}
 
-
 	public LocalDate getDate(String s) {
 		return LocalDate.of(Integer.parseInt(s.split("-")[0]), Integer.parseInt(s.split("-")[1]),
 				Integer.parseInt(s.split("-")[2]));
 	}
 
 	public Gender getGender(String stringGender) {
-		if (stringGender == "MALE") {
+		if (stringGender.equals("MALE")) {
 			return Gender.MALE;
 		}
 		return Gender.FEMALE;
@@ -172,28 +216,28 @@ public class UserDAO {
 	public ArrayList<UserSearchData> searchUsers(SearchData data, User loggedUser) {
 		ArrayList<UserSearchData> list = new ArrayList<UserSearchData>();
 		for (User user : findAll()) {
-			if (user.getName().toLowerCase().contains(data.getName().toLowerCase()) && user.getSurname().toLowerCase().contains(data.getLastName().toLowerCase())) {
+			if (user.getName().toLowerCase().contains(data.getName().toLowerCase())
+					&& user.getSurname().toLowerCase().contains(data.getLastName().toLowerCase())) {
 				LocalDate startDate = LocalDate.MIN;
-				if(!data.getStart().isEmpty())
+				if (!data.getStart().isEmpty())
 					startDate = LocalDate.parse(data.getStart());
 				LocalDate endDate = LocalDate.MAX;
-				if(!data.getEnd().isEmpty())
+				if (!data.getEnd().isEmpty())
 					endDate = LocalDate.parse(data.getEnd());
 				if (user.getDateOfBirth().isAfter(startDate) && user.getDateOfBirth().isBefore(endDate)) {
-					UserSearchData newUser = new UserSearchData(user.getId(), user.getName(), user.getSurname(), user.getProfilePicture(), getNumberOfMutualFriends(loggedUser, user));
+					UserSearchData newUser = new UserSearchData(user.getId(), user.getName(), user.getSurname(),
+							user.getProfilePicture(), getNumberOfMutualFriends(loggedUser, user));
 					list.add(newUser);
 				}
 			}
 		}
 		return list;
 	}
-	
+
 	public int getNumberOfMutualFriends(User loggedUser, User otherUser) {
 		System.out.println(loggedUser);
-		return loggedUser.getFriends().stream()
-			    .filter(otherUser.getFriends()::contains)
-			    .collect(Collectors
-			    .toList()).size();
+		return loggedUser.getFriends().stream().filter(otherUser.getFriends()::contains).collect(Collectors.toList())
+				.size();
 	}
 
 }
